--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.2.1",
+    "languagedetect": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
   },
